fixed cropping of placeholder in new comment

--- a/app/sass/show_entry.sass
+++ b/app/sass/show_entry.sass
@@ -464,13 +464,13 @@
             top: 0
             right: 0
             font-family: Calibri, Arial, Helvetica, sans-serif
-            height: 10px
+            height: 20px
             width: 506px
             min-width: 506px
             max-width: 506px
             border: none
             cursor: text
-            padding: 28px 28px 44px
+            padding: 28px 28px 34px
 
           .user
             +round(8)
@@ -502,7 +502,7 @@
             +bold
             +font(16)
             right: 8px
-            bottom: 8px
+            bottom: 6px
             padding: 0 16px 4px
 
 
